--- a/test/fixtures/core/ui/uiManager/public/index.html
+++ b/test/fixtures/core/ui/uiManager/public/index.html
@@ -3,10 +3,10 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title></title>
-	<script src="/primus/primus.js"></script>
+	<script src="/primus.js"></script>
 
 	<script type="text/javascript">
-		var primus = Primus.connect('//127.0.0.1:8080', {});
+		var primus = Primus.connect('//localhost:8080', {});
 		primus.write('message');
 	</script>
 </head>
