--- a/test/fixtures/core/ui/uiManager/public/index.html
+++ b/test/fixtures/core/ui/uiManager/public/index.html
@@ -2,13 +2,7 @@
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
-	<title></title>
-	<script src="/primus.js"></script>
-
-	<script type="text/javascript">
-		var primus = Primus.connect('//localhost:8080', {});
-		primus.write('message');
-	</script>
+	<title>Test</title>
 </head>
 <body>
 
