--- a/src/public/splash-screen.html
+++ b/src/public/splash-screen.html
@@ -73,6 +73,8 @@
 			background-image: -webkit-linear-gradient(45deg, rgba(0, 217, 126, 0.75) 25%, #D8D8D8 25%, #D8D8D8 50%, rgba(0, 217, 126, 0.75) 50%, rgba(0, 217, 126, 0.75) 75%, #D8D8D8 75%, #D8D8D8);
 			background-image: linear-gradient(45deg,rgba(0, 217, 126, 0.75) 25%, #D8D8D8 25%, #D8D8D8 50%, rgba(0, 217, 126, 0.75) 50%, rgba(0, 217, 126, 0.75) 75%, #D8D8D8 75%, #D8D8D8);
 			background-color: #D8D8D8;
+			border-bottom-left-radius: 3px;
+			border-bottom-right-radius: 3px;
 			-webkit-animation: uploadProgress 0.25s linear infinite;
 			animation: uploadProgress 0.25s linear infinite;
 			background-size: 1rem 1rem;
