splash screen and ui routines font antialiasing

--- a/src/public/ui-routines-installer.html
+++ b/src/public/ui-routines-installer.html
@@ -56,6 +56,11 @@
 			-moz-user-select: none;
 			-ms-user-select: none;
 				user-select: none;
+
+			-webkit-font-smoothing: antialiased;
+			text-rendering: optimizeLegibility;
+			-webkit-font-feature-settings: "kern";
+			font-kerning: normal;
 		}
 
 		h1 {
