--- a/src/public/splash-screen.html
+++ b/src/public/splash-screen.html
@@ -48,6 +48,7 @@
 			line-height: 22px;
 			/*color: #6B6B6B;*/
 			color: #8E8E8E;
+			-webkit-font-smoothing: antialiased;
 		}
 
 		* {
@@ -79,7 +80,7 @@
 			animation: uploadProgress 0.25s linear infinite;
 			background-size: 1rem 1rem;
 			display: block;
-			width: 55%;
+			width: 65%;
 			height: 0.3125rem;
 			margin: 0 auto;
 		}
@@ -98,6 +99,11 @@
 			left: 0;
 			right: 0;
 			opacity: 0;
+
+			-webkit-font-smoothing: antialiased;
+			text-rendering: optimizeLegibility;
+			-webkit-font-feature-settings: "kern";
+			font-kerning: normal;
 		}
 
 		#status-even {
