updated aboutWindow and improved update notifications

--- a/src/public/about.html
+++ b/src/public/about.html
@@ -136,11 +136,11 @@
 				}
 			}
 
-			document.title = i18n.__('aboutWindow_title');
-			document.getElementById('version').innerHTML = i18n.__('aboutWindow_version', gui.App.manifest.version);
-			document.getElementById('home-link').innerHTML = i18n.__('aboutWindow_link_home');
-			document.getElementById('github-link').innerHTML = i18n.__('aboutWindow_link_github');
-			document.getElementById('twitter-link').innerHTML = i18n.__('aboutWindow_link_twitter');
+			document.title = i18n.__('aboutWindow.title');
+			document.getElementById('version').innerHTML = i18n.__('aboutWindow.version', gui.App.manifest.version);
+			document.getElementById('home-link').innerHTML = i18n.__('aboutWindow.linkHome');
+			document.getElementById('github-link').innerHTML = i18n.__('aboutWindow.linkGithub');
+			document.getElementById('twitter-link').innerHTML = i18n.__('aboutWindow.linkTwitter');
 		}());
 	</script>
 </body>
