--- a/src/public/update-notify.html
+++ b/src/public/update-notify.html
@@ -26,7 +26,7 @@
 			font-size: 16px;
 			line-height: 22px;
 			color: #6B6B6B;
-			padding: 4rem 1rem 5rem;
+			padding: 3rem 1rem 2rem;
 		}
 
 		* {
@@ -46,7 +46,7 @@
 			font-size: 48px;
 			color: #3C3C3C;
 			line-height: 58px;
-			margin: 1rem 0;
+			margin: 0 0 1rem;
 		}
 
 		p {
