updated update notify address

--- a/src/public/update-notify.html
+++ b/src/public/update-notify.html
@@ -79,7 +79,7 @@
 	<h1 id="headline"></h1>
 	<p id="description"></p>
 
-	<a class="download-btn" href="#" id="download-btn"></a>
+	<a class="download-btn" href="https://peeriodproject.org" id="download-btn"></a>
 
 	<script type="text/javascript">
 		(function () {
