--- a/src/public/about.html
+++ b/src/public/about.html
@@ -105,7 +105,7 @@
 	<ul id="maintainers"></ul>
 
 	<ul class="links">
-		<li><a href="http://peeriodproject.org" id="home-link">Peeriod</a></li>
+		<li><a href="https://peeriodproject.github.io/" id="home-link">Peeriod</a></li>
 		<li><a href="https://github.com/peeriodproject" id="github-link">Github</a></li>
 		<li><a href="https://twitter.com/peeriodproject" id="twitter-link">Twitter</a></li>
 	</ul>
