fixed retina image sizes

--- a/src/public/about.html
+++ b/src/public/about.html
@@ -98,7 +98,7 @@
 	</style>
 </head>
 <body>
-	<img id="logo" src="#" />
+	<img id="logo" src="#" width="165" height="150" />
 
 	<div class="version">&mdash; <span id="version">Version</span> &mdash;</div>
 
