--- a/src/public/splash-screen.html
+++ b/src/public/splash-screen.html
@@ -57,6 +57,7 @@
 			-webkit-font-smoothing: antialiased;
 			background-repeat: no-repeat;
 			background-position: 50% 37%;
+			background-size: 290px 90px;
 		}
 
 		* {
