--- a/src/public/ui-routines-installer.html
+++ b/src/public/ui-routines-installer.html
@@ -150,6 +150,10 @@
 			font-style: italic;
 		}
 
+		#routines-list .notice {
+			font-weight: bold;
+		}
+
 		.install-btn-wrapper {
 			background-color: #F0F0F0;
 			position: absolute;
