Restart notification labels

--- a/src/public/routines/ui-chrome-extension-starter.html
+++ b/src/public/routines/ui-chrome-extension-starter.html
@@ -97,8 +97,8 @@
 	<body>
 		<div id="not-found">
 			<div>
-				<h1></h1>
-				<p></p>
+				<h1>Chrome restart required!</h1>
+				<p>Peeriod could not find its Chrome extension. If you have just installed Peeriod, please leave this tab open and restart Chrome.</p>
 			</div>
 		</div>
 
